# data_platform

./: .tool-versions
.github/workflows/: ci.yaml  docker-cubic_dmap.yml  docker.yml  elixir-ci.yaml  report-coverage.yaml
cubic_dmap/: .dockerignore  .gitignore  Dockerfile  README.md  env.template  mix.exs  pyproject.toml  sample_api.py
cubic_dmap/config/: config.exs  runtime.exs
cubic_dmap/cubic_dmap/: api.py  dataset.py  simplify.py  state.py
cubic_dmap/lib/: cubic_dmap.ex
cubic_dmap/lib/mix/tasks/cubic_dmap/: process.ex
cubic_dmap/test/: cubic_dmap_test.exs
cubic_dmap/tests/: test_api.py  test_dataset.py  test_simplify.py  test_state.py
data_platform/batch/cubic_ods/: process_incoming.py
ex_cubic_ingestion/lib/ex_cubic_ingestion/: validate_incoming.ex
